Criação de parágrafos sobre itens da lista, links internos e link externo.

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -7,13 +7,22 @@
     <title>Trybe Friends</title>
 </head>
 <body>
-    <h1>Lista de colegas Trybers</h1>
+    <h1>Exercícios</h1>
+    <h3>Colegas Trybers</h3>
     <ul>
-        <li>Eliane Silva</li>
-        <li>Stariel Isaac</li>
-        <li>Lana Fernandes</li>
+        <li><a href="#eliane">Eliane Silva</a></li>
+        <li><a href="#stariel">Stariel Isaac</a></li>
+        <li><a href="#lucas">Lucas Pinho</a></li>
     </ul>
+    
     <img src="https://tainamorais.github.io/site-cat/imagens/gato-adocao-006.jpg" alt="Gato preto fofinho olhando para cima" width="300px">
+    
     <img src="Snoopy.jpeg" alt="Gato branco e preto fofinho sentado no sofá" width="300px">
+
+    <p id="eliane">Sobre Eliane Silva: Uma Tryber bastante participativa nas aulas e mentorias, sempre com boas observações e contribuições à turma.</p>
+    <p id="stariel">Sobre Stariel Isaac: Tryber bastante ativo e observador nas aulas. Demonstrou interesse em grupos de estudo pela manhã, que também é a minha preferência.</p>
+    <p id="lucas">Sobre Lucas Pinho: Novo Tryber da turma, que chegou bastate comunicativo e atuante no Slack. Já fez muitas boas contribuições e está auxiliano na montagem de grupos de estudo.</p>
+
+    <h3><a href="https://www.google.com.br/" target="_blank">Dúvidas? Dê um Google!</a></h3>
 </body>
 </html>
