--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <h1>Exercícios</h1>
-    <h3>Colegas Trybers</h3>
+    <h3>Trybers colegas de equipe</h3>
     <ul>
-        <li><a href="#eliane">Eliane Silva</a></li>
-        <li><a href="#stariel">Stariel Isaac</a></li>
-        <li><a href="#lucas">Lucas Pinho</a></li>
+        <li><a href="#alexia">Alexia Talissa</a></li>
+        <li><a href="#davi">Davi Silva</a></li>
+        <li><a href="#bernardo">Bernardo Marques</a></li>
     </ul>
     
     <img src="https://tainamorais.github.io/site-cat/imagens/gato-adocao-006.jpg" alt="Gato preto fofinho olhando para cima" width="300px">
     
     <img src="Snoopy.jpeg" alt="Gato branco e preto fofinho sentado no sofá" width="300px">
 
-    <p id="eliane">Sobre Eliane Silva: Uma Tryber bastante participativa nas aulas e mentorias, sempre com boas observações e contribuições à turma.</p>
-    <p id="stariel">Sobre Stariel Isaac: Tryber bastante ativo e observador nas aulas. Demonstrou interesse em grupos de estudo pela manhã, que também é a minha preferência.</p>
-    <p id="lucas">Sobre Lucas Pinho: Novo Tryber da turma, que chegou bastate comunicativo e atuante no Slack. Já fez muitas boas contribuições e está auxiliano na montagem de grupos de estudo.</p>
+    <p id="alexia">Sobre Alexia Talissa: Uma Tryber bastante participativa durante a execução do trabalho em equipe, contribuindo em vários pontos, sempre solícita a ensinar o que sabe e fazendo bastante observações.</p>
+    <p id="davi">Sobre Davi Silva: Tryber bastante ativo, comunicativo e muito bem humorado. Sempre disposto a aprender e sabe trabalhar muito bem em equipe Deu a ideia do nome da equipe!.</p>
+    <p id="bernardo">Sobre Bernardo Marques: Um Tryber com bastante iniciativa, que sabe se colocar e se expressar bem. Fez uma excelente contribuição com a elaboração da imagem do projeto dentro da platadorma.</p>
 
     <h3><a href="https://www.google.com.br/" target="_blank">Dúvidas? Dê um Google!</a></h3>
 </body>
