--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <h1>Soco a 80km/h: <br> Conheça o Stomatopoda.</h1>
     </header>
 
-    <nav>
+    <nav class="navigation">
         <ul>
             <li><a href="#">Página Inicial</a></li>
             <li><a href="#">Sobre</a></li>
