Estilização do item informações gerais e tabela

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -27,7 +27,7 @@
     <article>
         <h2>Fatos sobre o Stomatopoda</h2>
         
-        <section>
+        <section class="general-info">
             <h3>Informações gerais</h3>
             <p>Stomatopoda (ou estomatópode), cujo nome científico é <em>Odontodactylus scyllaruschamados</em>, chamados popularmente de tamarutacas ou de lacraias-do-mar no Brasil, é uma ordem de <strong>crustáceos marinhos</strong> da subclasse Hoplocarida, que agrupa cerca de 400 espécies, caracterizadas principalmente pela morfologia da segunda pata torácica, que é modificada em apêndice subquelado, lembrando uma pata de louva-a-deus.</p>
 
