Iniciei estilização do item supervisão

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -64,12 +64,13 @@
             </div>
         </section>
 
-        <section>
+        <section class="supervisao">
             <h3>Supervisão</h3>
+            <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um <strong>sentido de visão muito apurado</strong> e capaz de interpretar polarização no espectro <strong>ultravioleta</strong> e <strong>infravermelho</strong>. <br> <br>
+            Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.
+            <br> <br>
+            A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
             <img src="http://2.bp.blogspot.com/-52ZsBnuNV54/T7uLw2V0DjI/AAAAAAAAFr0/vEkX1Izj80w/s400/mantis.jpg" alt="Imagem do Stomatopoda">
-            <p>Os estomatópodes são predadores ativos que caçam presas com o auxílio de um <strong>sentido de visão muito apurado</strong> e capaz de interpretar polarização no espectro <strong>ultravioleta</strong> e <strong>infravermelho</strong>.</p>
-            <p>Esses animais possuem o mais complexo sistema de visão de cores do mundo animal, pois enxergam <strong>12 cores primárias</strong>, correspondentes aos 12 pigmentos distintos presentes em sua retina.</p>
-            <p>A visão dos estomatópodes é sensível à luz ultravioleta, mas ainda é desconhecido se ela pode distinguir a luz infravermelha.</p>
         </section>
 
         <section>
