ajustes de fonte, color e background no header e nav

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1>Soco a 80km/h: <br> Conheça o Stomatopoda.</h1>
+        <h1>Soco a 80km/h: <br> Conheça o Stomatopoda</h1>
     </header>
 
     <nav class="navigation">
