Estilizei a seção de referêcias bibliográficas

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -75,11 +75,11 @@
 
         <section class="supersoco">
             <h3>Supersoco</h3>
-            <p>As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a <strong>velocidade de um tiro calibre .22</strong> (equivalente a <strong>720 km/h</strong>) e uma pressão de impacto de <strong>600 N/cm²</strong>.[3] Essa força esmagadora é a responsável pelo seu título de "<strong>lagosta-boxeadora</strong>" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
             <img src="http://4.bp.blogspot.com/-s6Bal4LOpy0/T7uMGU-gj_I/AAAAAAAAFr8/OdHsxHMpfr0/s400/mantis-shrimp-n.jpg" alt="Imagem do Stomatopoda">
+            <p>As maiores esmagadoras, tais como exemplares de Odontodactylus scyllarus, são capazes de desferir um dos mais rápidos e violentos golpes do reino animal, um soco que pode apresentar a <strong>velocidade de um tiro calibre .22</strong> (equivalente a <strong>720 km/h</strong>) e uma pressão de impacto de <strong>600 N/cm²</strong>.[3] Essa força esmagadora é a responsável pelo seu título de "<strong>lagosta-boxeadora</strong>" e é capaz de facilmente quebrar a carapaça de um caranguejo, as conchas duras e calcificadas de gastrópodes ou até mesmo quebrar o vidro reforçado de um aquário.</p>
         </section>
 
-        <section>
+        <section class="references">
             <h3>Referências bibliográficas</h3>
             <ul>
                 <li><a href="https://pt.wikipedia.org/wiki/Stomatopoda" target="_blank">Stomatopoda – Wikipédia, a enciclopedia livre</a></li>
