Ajustes finais de link - target_blank

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/index.html
@@ -34,7 +34,7 @@
             <img src="http://1.bp.blogspot.com/-9nUUfWBZg8w/T7uLMMiurGI/AAAAAAAAFrs/cjHB7NDNCJg/s400/Mantis-shrimp.jpg" alt="Imagem do Stomatopoda">
 
             <div>
-                <h5>Classificação científica:</h5>
+                <h4>Classificação científica:</h4>
                 <table>
                     <tr>
                         <td><strong>Reino:</strong></td>
@@ -94,7 +94,7 @@
     </aside>
 
     <footer>
-        <p>Conteúdo compilado por <a href="https://github.com/tainamorais">Tainá Morais</a>, 2022.</p>
+        <p>Conteúdo compilado por <a href="https://github.com/tainamorais" target="_blank">Tainá Morais</a>, 2022.</p>
     </footer>
 </body>
 </html>
